crates/vm/tests/snapshots/assignment__assign.snap
---
source: crates/vm/tests/assignment.rs
expression: snapshot
---
# Input:
v := 10
v = 5
print v


# Result (success):
none

# Stdout:
5

